--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@types/firebase": "^3.2.1",
     "@types/reach__router": "^1.3.10",
     "@types/react-redux": "^7.1.24",
