--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "@types/firebase": "^3.2.1",
     "@types/reach__router": "^1.3.10",
-    "@types/react-redux": "^7.1.24",
+    "@types/redux": "^3.6.0",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
@@ -26,6 +26,7 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.7",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.18.0",
