--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@types/reach__router": "^1.3.10",
+    "firebase": "^9.8.4",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
